--- a/public/css/tools-main.css
+++ b/public/css/tools-main.css
@@ -78,3 +78,16 @@ h2::after {
     font-size: 15px;
     text-transform: uppercase;
 }
+
+.tool {
+    border-top: 1px solid rgba(255, 255, 255, 0.6);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+    background: rgba(236, 236, 236, 0.7);
+    display: inline-block;
+    margin: auto 10px;
+    padding: 20px;
+    border-radius: 25px;
+    width: calc(33.33% - 20px);
+    height: 100%;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+}
