--- a/public/css/dapp-stake-stake.css
+++ b/public/css/dapp-stake-stake.css
@@ -226,7 +226,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .validator-table-row {
     display: flex;
     flex-direction: column;
-    padding: 0 4px 0 8px;
+    padding: 0 8px;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
